--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,38 +1,41 @@
-# Multi-stage build for smaller image size
-FROM node:20-alpine AS builder
+# Base stage
+FROM node:20-slim AS base
+ENV PNPM_HOME="/pnpm"
+ENV PATH="$PNPM_HOME:$PATH"
+RUN corepack enable
+
+# Install dependencies for Chrome (Puppeteer)
+RUN apt-get update && apt-get install -y \
+    chromium \
+    fonts-ipafont-gothic fonts-wqy-zenhei fonts-thai-tlwg fonts-kacst fonts-freefont-ttf libxss1 \
+    --no-install-recommends \
+    && rm -rf /var/lib/apt/lists/*
+
+ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true
+ENV PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium
 
 WORKDIR /app
 
-# Install dependencies
-COPY package*.json ./
-RUN npm install
-
-# Copy source code
+# Build stage
+FROM base AS build
+COPY package.json pnpm-lock.yaml ./
+RUN pnpm install --frozen-lockfile
 COPY . .
+RUN pnpm build
 
-# Build step if needed (for TS, though tsx runs directly usually)
-# RUN npm run build
+# Production stage
+FROM base AS prod
+COPY --from=build /app/dist /app/dist
+COPY --from=build /app/package.json /app/package.json
+COPY --from=build /app/pnpm-lock.yaml /app/pnpm-lock.yaml
+RUN pnpm install --prod --frozen-lockfile
 
-# --- Production Image ---
-FROM node:20-alpine AS runner
+# Expose API port
+EXPOSE 3001
 
-WORKDIR /app
+# TEE Environment Variables (Defaults)
+ENV TEE_SIMULATION=true
+ENV TEE_SECRET_KEY=mock-secret
 
-# Install runtime dependencies (if any native modules needed)
-RUN apk add --no-cache curl
-
-# Copy from builder
-COPY --from=builder /app/node_modules ./node_modules
-COPY --from=builder /app/package*.json ./
-COPY --from=builder /app/src ./src
-COPY --from=builder /app/tsconfig.json ./ 2>/dev/null || :
-
-# Define environment variables (overridden by docker-compose/k8s)
-ENV NODE_ENV=production
-ENV PORT=3000
-
-# Expose port (if API is still running inside, though runtime might be headless)
-EXPOSE 3000
-
-# Start the application
-CMD ["npm", "start"]
+# Start the agent runtime
+CMD ["node", "dist/index.js"]
