--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,12 @@
     "@tanstack/react-query": "^5.90.20",
     "clsx": "^2.1.1",
     "framer-motion": "^12.34.0",
+    "lightweight-charts": "^5.1.0",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "sass": "^1.97.3",
     "tailwind-merge": "^3.4.0",
     "viem": "^2.45.3",
     "wagmi": "^2.14.0"
