feat: Fix Deployments, Switch to Playwright, Real Email, Fix Sell Tokens

--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
         "@elysiajs/node": "latest",
         "@types/node": "latest",
         "elysia": "latest",
+        "playwright": "^1.58.2",
         "puppeteer": "^24.37.2",
         "tsx": "latest",
         "typescript": "latest",
