--- a/contracts/package.json
+++ b/contracts/package.json
@@ -16,6 +16,7 @@
     },
     "dependencies": {
         "@openzeppelin/contracts": "^5.4.0",
-        "dotenv": "^17.2.4"
+        "dotenv": "^17.2.4",
+        "viem": "^2.46.2"
     }
 }
