refactor: Upgrade Create Page with Zod and Real-Time WebSockets

--- a/backend/package.json
+++ b/backend/package.json
@@ -17,5 +17,8 @@
         "tsx": "latest",
         "typescript": "latest",
         "viem": "latest"
+    },
+    "devDependencies": {
+        "localtunnel": "^2.0.2"
     }
 }
