--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@bnb-chain/greenfield-js-sdk": "^2.2.2",
+    "@hookform/resolvers": "^5.2.2",
     "@rainbow-me/rainbowkit": "^2.2.10",
     "@tanstack/react-query": "^5.90.20",
     "clsx": "^2.1.1",
@@ -19,10 +20,12 @@
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-hook-form": "^7.71.1",
     "sass": "^1.97.3",
     "tailwind-merge": "^3.4.0",
     "viem": "^2.46.2",
-    "wagmi": "^2.14.0"
+    "wagmi": "^2.14.0",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@types/node": "^20",
